--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,8 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
+            <link rel="stylesheet" href="hhttps://bootswatch.com/5/united/_variables.scss">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +16,11 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            {% include ("partials/_header.html.twig") %}
+        {% endblock %}
+        {% block body %}
+
+        {% endblock %}
     </body>
 </html>
