CRUD( update + delete) for Ingredient

--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -4,15 +4,20 @@
 
 {% block body %}
     <div class="container mt-4">
-        {# read and display just one flash message type #}
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-dismissible alert-success mt-4">
-                {{ message }}
-            </div>
-        {% endfor %}
+
         {% if ingredients.items is not empty %}
         <h1>Mes ingrédients</h1>
 
+            <a href="{{ path('ingredient.new') }}" class="btn btn-primary">
+                Créer un ingrédient
+            </a>
+
+            {# read and display just one flash message type #}
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-dismissible alert-success mt-4">
+                    {{ message }}
+                </div>
+            {% endfor %}
         {# total items count #}
         <div class="count mt-4">
             <p class="text-primary">Il y a {{ ingredients.getTotalItemCount }} ingrédients au total</p>
@@ -25,6 +30,8 @@
                 <th scope="col">Nom</th>
                 <th scope="col">Prix</th>
                 <th scope="col">Date de création</th>
+                <th scope="col">Edition</th>
+                <th scope="col">Supression</th>
             </tr>
             </thead>
             <tbody>
@@ -34,6 +41,12 @@
                     <td>{{ ingredient.name }}</td>
                     <td>{{ ingredient.price }}</td>
                     <td>{{ ingredient.createdAt | date("m/d/Y") }}</td>
+                    <td>
+                        <a href="{{ path('ingredient.edit', {id : ingredient.id}) }}"  class="btn btn-info" > <i class="fa-solid fa-pen-to-square" ></i>  Modifier</a>
+                    </td>
+                    <td>
+                        <a href="{{ path('ingredient.delete', {id : ingredient.id}) }}" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr?')"> <i class="fa-solid fa-trash"></i> Supprimer</a>
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
