--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
             <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
             <link rel="stylesheet" href="hhttps://bootswatch.com/5/united/_variables.scss">
         {% endblock %}
