--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -1,13 +1,11 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <div class="container">
 
+        <h1 class="mt-4"> Modification d'un ingrédient</h1>
 
-
-        <h1 class="mt-4"> Création d'un ingrédient</h1>
-
-        {{ form_start(form) }}
+       {{ form_start(form) }}
         <div class="form-group">
             {{ form_label(form.name) }}
             {{ form_widget(form.name) }}
@@ -25,7 +23,7 @@
 
         </div>
         <div class="form-group">
-            {{ form_row(form.submit) }}
+            {{ form_row(form.submit, {'label' : 'Modifier mon ingrédient'}) }}
         </div>
 
 
